Messages sending back & forth with bubble view

--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,8 @@ Dependencies/
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+### Breakpoints ###
+*.xcbkptlist
+
 # End of https://www.toptal.com/developers/gitignore/api/swift,xcode,objective-c,osx
+
